--- a/template.yml
+++ b/template.yml
@@ -17,7 +17,7 @@ Resources:
       Handler: app.lambda_handler
       Runtime: python3.8
       Events:
-        HelloWorld:
+        EventRule:
           Type: Api 
           Properties:
             Path: /
